<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_filters"
        android:name="com.example.scrollshield.ui.filters.FiltersFragment"
        android:label="@string/title_filters"
        tools:layout="@layout/fragment_filters" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.scrollshield.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.scrollshield.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_badges"
        android:name="com.example.scrollshield.ui.badges.BadgesFragment"
        android:label="@string/title_badges"
        tools:layout="@layout/fragment_badges" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.scrollshield.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>