<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/dashboard_background"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:background="@drawable/box"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="@id/dashboard_background"
            app:layout_constraintStart_toStartOf="@id/dashboard_background"
            app:layout_constraintTop_toTopOf="@id/dashboard_background"
            app:layout_constraintBottom_toBottomOf="@id/dashboard_background">

            <ImageView
                android:id="@+id/userPicture"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_weight="1"
                tools:src="@drawable/person_24dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/title_profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userNameCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/dashboard_greeting"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:layout_weight="0" />

                <ProgressBar
                    android:id="@+id/dailyProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"

                    android:layout_weight="0.8"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="10" />

                <TextView
                    android:id="@+id/dailyProgressText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/dashboard_daily_progress"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_weight="0.2"/>

            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:id="@+id/dashboardScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dashboard_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="Dashboard"
                    android:textColor="@color/header_text_color"
                    android:fontFamily="@font/saira_family"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:id="@+id/connection_count_box"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal"
                    android:background="@drawable/box_rounded"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/connection_count_image"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:src="@drawable/hub_24dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">

                        <TextView
                            android:id="@+id/connection_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder_num"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:fontFamily="@font/saira_family"
                            android:textStyle="bold"
                            android:layout_gravity="center"/>
                        <TextView
                            android:id="@+id/connection_count_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Connections"
                            android:textColor="@color/white"
                            android:textSize="16sp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="15dp">

                    <LinearLayout
                        android:id="@+id/badges_count_box"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:orientation="horizontal"
                        android:background="@drawable/box_rounded"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="0.5"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/badges_count_image"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:src="@drawable/social_leaderboard_24dp"
                            android:scaleType="fitCenter"
                            android:adjustViewBounds="true"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp">

                            <TextView
                                android:id="@+id/badges_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/placeholder_num"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                android:fontFamily="@font/saira_family"
                                android:textStyle="bold"
                                android:layout_gravity="center"/>
                            <TextView
                                android:id="@+id/badges_count_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Badges"
                                android:textColor="@color/white"
                                android:textSize="16sp"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/credits_count_box"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:orientation="horizontal"
                        android:background="@drawable/box_rounded"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="0.5"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/credits_count_image"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:src="@drawable/universal_currency_alt_24dp"
                            android:scaleType="fitCenter"
                            android:adjustViewBounds="true"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp">

                            <TextView
                                android:id="@+id/credits_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/placeholder_num"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                android:fontFamily="@font/saira_family"
                                android:textStyle="bold"
                                android:layout_gravity="center"/>
                            <TextView
                                android:id="@+id/credits_count_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Credits"
                                android:textColor="@color/white"
                                android:textSize="16sp"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="Content Usage"
                    android:textColor="@color/header_text_color"
                    android:fontFamily="@font/saira_family"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/box_rounded"
                    android:gravity="start">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/content_usage_recyclerview"
                        android:contentDescription="@string/content_usage_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="Recent Activity"
                    android:textColor="@color/header_text_color"
                    android:fontFamily="@font/saira_family"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/box_rounded"
                    android:gravity="start">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recent_activity_recyclerview"
                        android:contentDescription="@string/recent_activity_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"/>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>